--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "threadi/product-swatches-light",
-	"version": "1.1.0",
+	"version": "2.0.0",
 	"description": "This plugin adds swatches for WooCommerce products.",
 	"authors": [
 		{
@@ -30,11 +30,12 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"ProductSwatches\\": "app/"
+			"ProductSwatchesLight\\": "app/"
 		}
 	},
 	"require": {
-		"php": "^8.0"
+		"php": "^8.0",
+		"threadi/wp-easy-dialog": "^1.0.7"
 	},
 	"require-dev": {
 		"wp-coding-standards/wpcs": "^3.1.0",
