--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -20,6 +20,10 @@ jobs:
               run: |
                   composer install
                   composer update
+                  cd vendor/threadi/easy-dialog-for-wordpress/
+                  npm i
+                  npm run build
+                  cd ../../../
 
             - name: Generate autoloader
               run: composer dump-autoload -oa --no-dev
