--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
 	},
 	"require": {
 		"php": "^8.0",
-		"threadi/wp-easy-dialog": "^1.0.7"
+		"threadi/easy-dialog-for-wordpress": "^1.0.1"
 	},
 	"require-dev": {
 		"wp-coding-standards/wpcs": "^3.1.0",
