--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -73,4 +73,4 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
-                  files: ${{ github.event.repository.name }}_${{ github.ref_name }}.zip
+                  files: product-swatches-light_${{ github.ref_name }}.zip
