--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -34,6 +34,9 @@ jobs:
             - name: Run WordPress Coding Standard checks
               run: vendor/bin/phpcs --standard=ruleset.xml .
 
+            - name: Run PHPStan check
+              run: vendor/bin/phpstan analyse
+
             - name: Set version number 1
               uses: richardrigutins/replace-in-files@v2
               with:
@@ -64,6 +67,7 @@ jobs:
                   zip -ur product-swatches-light_${{ github.ref_name }}.zip product-swatches-light/vendor/autoload.php
                   zip -ur product-swatches-light_${{ github.ref_name }}.zip product-swatches-light/vendor/composer/*
                   zip -ur product-swatches-light_${{ github.ref_name }}.zip product-swatches-light/vendor/threadi/*/build/*
+                  zip -ur product-swatches-light_${{ github.ref_name }}.zip product-swatches-light/vendor/threadi/*/src/*
                   mv product-swatches-light ${{ github.event.repository.name }}/
                   cp product-swatches-light_${{ github.ref_name }}.zip ${{ github.event.repository.name }}/
 
