--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 	},
 	"config": {
 		"allow-plugins": {
-			"dealerdirect/phpcodesniffer-composer-installer": true
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"phpstan/extension-installer": true
 		},
 		"optimize-autoloader": true,
 		"classmap-authoritative": true,
@@ -35,11 +36,16 @@
 	},
 	"require": {
 		"php": "^8.0",
-		"threadi/easy-dialog-for-wordpress": "^1.0.1"
+		"threadi/easy-dialog-for-wordpress": "^1.0.1",
+		"threadi/easy-transients-for-wordpress": "^1.2.1"
 	},
 	"require-dev": {
 		"wp-coding-standards/wpcs": "^3.1.0",
 		"pronamic/wp-documentor": "^1.3",
-		"automattic/vipwpcs": "^3.0"
+		"automattic/vipwpcs": "^3.0",
+		"phpstan/phpstan": "^2.1",
+		"szepeviktor/phpstan-wordpress": "^2.0",
+		"phpstan/extension-installer": "^1.4",
+		"php-stubs/wp-cli-stubs": "^2.11"
 	}
 }
