--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -4,6 +4,7 @@ on:
     push:
         tags:
             - '*'
+    workflow_dispatch:
 
 jobs:
     build:
@@ -44,7 +45,7 @@ jobs:
                   search-text: '@@VersionNumber@@'
                   replacement-text: ${{ github.ref_name }}
 
-            - name: Set version number 2
+            - name: Set version number 3
               uses: richardrigutins/replace-in-files@v2
               with:
                   files: 'readme.txt'
