--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -26,6 +26,8 @@ jobs:
                   npm run build
                   cd ../../../
 
+            - uses: anchore/sbom-action@v0
+
             - name: Generate autoloader
               run: composer dump-autoload -oa --no-dev
 
