--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "threadi/product-swatches-light",
-	"version": "2.0.0",
+	"version": "2.1.0",
 	"description": "This plugin adds swatches for WooCommerce products.",
 	"authors": [
 		{
@@ -13,10 +13,10 @@
 	"minimum-stability": "stable",
 	"scripts": {
 		"post-install-cmd": [
-			"\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcsstandards/phpcsutils,vendor/phpcsstandards/phpcsextra,vendor/sirbrillig/phpcs-variable-analysis,vendor/automattic/vipwpcs"
+			"composer dump-autoload"
 		],
 		"post-update-cmd": [
-			"\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcsstandards/phpcsutils,vendor/phpcsstandards/phpcsextra,vendor/sirbrillig/phpcs-variable-analysis,vendor/automattic/vipwpcs"
+			"composer dump-autoload"
 		]
 	},
 	"config": {
@@ -35,7 +35,7 @@
 		}
 	},
 	"require": {
-		"php": "^8.0",
+		"php": "^8.2",
 		"threadi/easy-dialog-for-wordpress": "^1.0.1",
 		"threadi/easy-transients-for-wordpress": "^1.2.1"
 	},
@@ -46,6 +46,7 @@
 		"phpstan/phpstan": "^2.1",
 		"szepeviktor/phpstan-wordpress": "^2.0",
 		"phpstan/extension-installer": "^1.4",
-		"php-stubs/wp-cli-stubs": "^2.11"
+		"php-stubs/wp-cli-stubs": "^2.11",
+		"phpcompatibility/phpcompatibility-wp": "^2.1"
 	}
 }
