--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
 		],
 		"post-update-cmd": [
 			"composer dump-autoload"
-		]
+		],
+		"test": "phpunit",
+		"test-install": "bash bin/install-wp-tests.sh wordpress_test root 'debian' 127.0.0.1 latest",
+		"test-install-during-build": "bash bin/install-wp-tests.sh wordpress_test root 'debian' 127.0.0.1 latest false true"
 	},
 	"config": {
 		"allow-plugins": {
@@ -34,6 +37,11 @@
 			"ProductSwatchesLight\\": "app/"
 		}
 	},
+	"autoload-dev": {
+		"psr-4": {
+			"ProductSwatchesLight\\Tests\\": "tests/"
+		}
+	},
 	"require": {
 		"php": "^8.2",
 		"threadi/easy-dialog-for-wordpress": "^1.0.1",
@@ -47,6 +55,9 @@
 		"szepeviktor/phpstan-wordpress": "^2.0",
 		"phpstan/extension-installer": "^1.4",
 		"php-stubs/wp-cli-stubs": "^2.11",
-		"phpcompatibility/phpcompatibility-wp": "^2.1"
+		"phpcompatibility/phpcompatibility-wp": "^2.1",
+		"dealerdirect/phpcodesniffer-composer-installer": "^1.2",
+		"yoast/phpunit-polyfills": "^1.0",
+		"wp-phpunit/wp-phpunit": "^6.3"
 	}
 }
