--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
 	"require": {
 		"php": "^8.2",
 		"threadi/easy-dialog-for-wordpress": "^1.0.1",
+		"threadi/easy-setup-for-wordpress": "^1.2.3",
 		"threadi/easy-transients-for-wordpress": "^1.2.1"
 	},
 	"require-dev": {
