add PHP Unit Tests to release build

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
 		"optimize-autoloader": true,
 		"classmap-authoritative": true,
 		"apcu-autoloader": true,
-		"prepend-autoloader": false
+		"prepend-autoloader": false,
+		"platform-check": false
 	},
 	"autoload": {
 		"psr-4": {
