--- a/phpstan.neon
+++ b/phpstan.neon
@@ -15,6 +15,7 @@ parameters:
     - uninstall.php
     - inc/constants.php
   excludePaths:
+    - app/Dependencies/*
     - app/Swatches/Product.php
   scanFiles:
     - %rootDir%/../../php-stubs/wordpress-stubs/wordpress-stubs.php
@@ -22,3 +23,5 @@ parameters:
     - %rootDir%/../../php-stubs/wp-cli-stubs/wp-cli-commands-stubs.php
     - %rootDir%/../../php-stubs/wp-cli-stubs/wp-cli-i18n-stubs.php
     - %rootDir%/../../php-stubs/wp-cli-stubs/wp-cli-tools-stubs.php
+  earlyTerminatingFunctionCalls:
+    - wp_send_json
